# Algo_Final

./: CMakeLists.txt  FY.cpp  FY.h  JT.cpp  JT.h  Lexi.cpp  Lexi.h  Mix.cpp  Mix.h  README.md  Random_Automatic.cpp  Random_Automatic.h  Random_Manual.cpp  Random_Manual.h  bingo.txt  main.cpp
.github/workflows/: build.yaml
output_folder/: bingo_output.txt  hoyle_output.txt  patient_trials_output.txt  raffle_output.txt
